--- a/RSSReader/RSSReader1.2.csproj
+++ b/RSSReader/RSSReader1.2.csproj
@@ -89,9 +89,9 @@
     <Compile Include="Objects\Article.cs" />
     <Compile Include="Objects\Channel.cs" />
     <Compile Include="Objects\City.cs" />
-    <Compile Include="Objects\State.cs" />
+    <Compile Include="Objects\SaveXML.cs" />
+    <Compile Include="Objects\LoadXML.cs" />
     <Compile Include="Objects\Feed.cs" />
-    <Compile Include="Objects\XML_Handler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="addChannel.resx">
@@ -131,6 +131,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Objects\XMLProfile.xml" />
+    <Content Include="Objects\XMLFeed.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
