--- a/RSSReader/RSSReader1.2.csproj
+++ b/RSSReader/RSSReader1.2.csproj
@@ -33,6 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="BSE.Windows.Forms">
       <HintPath>..\..\..\..\Downloads\GMap.NET.WindowsForms\BSE.Windows.Forms.dll</HintPath>
@@ -94,11 +95,12 @@
     </Compile>
     <Compile Include="Objects\Article.cs" />
     <Compile Include="Objects\Channel.cs" />
-    <Compile Include="Objects\City.cs" />
+    <Compile Include="Objects\LoadXML.cs" />
+    <Compile Include="Objects\MapView\City.cs" />
+    <Compile Include="Objects\MapView\CityHT.cs" />
     <Compile Include="Objects\MapView\FeedMarker.cs" />
-    <Compile Include="Objects\State.cs" />
+    <Compile Include="Objects\SaveXML.cs" />
     <Compile Include="Objects\Feed.cs" />
-    <Compile Include="Objects\XML_Handler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="addChannel.resx">
