--- a/RSSReader/RSSReader1.2.csproj
+++ b/RSSReader/RSSReader1.2.csproj
@@ -128,6 +128,7 @@
       <DependentUpon>ListView.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <None Include="Objects\MapView\WorldCities.csv" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
